// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts "size" prop 1`] = `
<svg
  height="32"
  viewBox="0 0 100 100"
  width="32"
>
  <title>
    Plus Icon
  </title>
  <polygon
    points="100 38.19 61.81 38.19 61.81 0 38.19 0 38.19 38.19 0 38.19 0 61.81 38.19 61.81 38.19 100 61.81 100 61.81 61.81 100 61.81 100 38.19"
  />
</svg>
`;

exports[`renders 1`] = `
<svg
  height="16"
  viewBox="0 0 100 100"
  width="16"
>
  <title>
    Plus Icon
  </title>
  <polygon
    points="100 38.19 61.81 38.19 61.81 0 38.19 0 38.19 38.19 0 38.19 0 61.81 38.19 61.81 38.19 100 61.81 100 61.81 61.81 100 61.81 100 38.19"
  />
</svg>
`;
